--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/brunorosso123/js/issues"
   },
-  "homepage": "https://github.com/brunorosso123/js#readme"
+  "homepage": "https://github.com/brunorosso123/js#readme",
+  "dependencies": {
+    "node-fetch": "^3.3.2",
+    "xmlhttprequest": "^1.8.0"
+  },
+  "type":"module"
 }
